# Aether_OS_Nexus_Core_v.0.3

./: README.md
.github/workflows/: rust.yml
AetherOS/: Cargo.toml  README.md  aetheros-target.json  build_initrd_vnodes.sh
AetherOS/.cargo/: config.toml
AetherOS/Nexus/UI/common/src/ipc/: ui_protocol.rs
AetherOS/Nexus/UI/docs/ui/: colab-testing.md  compositor.md
AetherOS/Nexus/UI/tools/: colab_ui_test.py
AetherOS/Nexus/UI/vnode/display-compositor/: Cargo.toml
AetherOS/Nexus/UI/vnode/display-compositor/src/: main.rs
AetherOS/Nexus/UI/vnode/webview/: Cargo.toml  vnode.yml
AetherOS/Nexus/UI/vnode/webview/src/: main.rs
AetherOS/common/: Cargo.toml
AetherOS/common/allocator/: Cargo.toml
AetherOS/common/examples/: Cargo.toml
AetherOS/common/src/: lib.rs  nexus_net_transport.rs  syscall.rs
AetherOS/common/src/arp_dht/: mod.rs
AetherOS/common/src/examples/: mod.rs
AetherOS/common/src/ipc/: display.rs  echo_ipc.rs  file_manager_ipc.rs  init_ipc.rs  logger_ipc.rs  mod.rs  shell_ipc.rs  test_ipc.rs  ui_protocol.rs  vfs_ipc.rs  vnode.rs  webview.rs
AetherOS/common/src/swarm_engine/: mod.rs
AetherOS/common/src/trust/: mod.rs
AetherOS/common/src/ui/: css_engine.rs  html_parser.rs  layout.rs  mod.rs
AetherOS/docs/ai/: model-runtime.md
AetherOS/docs/apps/: file-manager.md
AetherOS/docs/fs/: vfs.md
AetherOS/docs/system/: init.md  qemu-first-test.md
AetherOS/docs/vnodes/: mail-service.md  model-runtime.md
AetherOS/kernel/: Cargo.toml  build.rs  error.rs  linker.ld  x86_64-aether_os.json
AetherOS/kernel/.cargo/: config.toml
AetherOS/kernel/src/: aetherfs.rs  caps.rs  config.rs  console.rs  elf.rs  gdt.rs  heap.rs  idt.rs  ipc.rs  lib.rs  main.rs  syscall.rs  timer.rs  usercopy.rs  vnode_loader.rs
AetherOS/kernel/src/arch/x86_64/: dma.rs  gdt.rs  idt.rs  mod.rs
AetherOS/kernel/src/drivers/: framebuffer.rs  mod.rs  serial.rs  vga_text.rs
AetherOS/kernel/src/interrupts/: keyboard.rs  mod.rs  timer.rs
AetherOS/kernel/src/ipc/: mailbox.rs  mod.rs
AetherOS/kernel/src/memory/: frame_allocator.rs  mod.rs  page_allocator.rs
AetherOS/kernel/src/task/: mod.rs  scheduler.rs
AetherOS/libnexus-net/: Cargo.toml
AetherOS/libnexus-net/src/: lib.rs
AetherOS/rootfs/: init
AetherOS/rootfs/etc/: .gitkeep
AetherOS/rootfs/vnode/: .gitkeep
AetherOS/scripts/: build_all.sh  build_initrd.sh  build_kernel.sh  build_kernel_image.sh  run_qemu.sh
AetherOS/src/ipc/: dns_ipc.rs  file_manager_ipc.rs  init_ipc.rs  logger_ipc.rs  model_runtime_ipc.rs  vfs_ipc.rs  vnode.rs
AetherOS/src/swarm_engine/: nexus_net_transport.rs
AetherOS/vnode/dns-resolver/: Cargo.toml  vnode.yml
AetherOS/vnode/dns-resolver/src/: main.rs
AetherOS/vnode/echo/: Cargo.toml  vnode.yml
AetherOS/vnode/echo/src/: main.rs
AetherOS/vnode/file-manager/: Cargo.toml
AetherOS/vnode/file-manager/src/: main.rs
AetherOS/vnode/init-service/: Cargo.toml
AetherOS/vnode/init-service/src/: main.rs
AetherOS/vnode/logger/: Cargo.toml  vnode.yml
AetherOS/vnode/mail-service/: Cargo.toml  vnode.yml
AetherOS/vnode/mail-service/src/: main.rs
AetherOS/vnode/model-runtime/: Cargo.toml
AetherOS/vnode/model-runtime/src/: main.rs
AetherOS/vnode/net-bridge/: Cargo.toml  vnode.yml
AetherOS/vnode/net-bridge/src/: main.rs
AetherOS/vnode/net-stack/: Cargo.toml  example.rs  main.rs  vnode.yml
AetherOS/vnode/net-stack/src/: main.rs
AetherOS/vnode/registry/: Cargo.toml
AetherOS/vnode/registry/src/: main.rs
AetherOS/vnode/shell/: Cargo.toml
AetherOS/vnode/shell/src/: main.rs
AetherOS/vnode/socket-api/: Cargo.toml  vnode.yml
AetherOS/vnode/socket-api/src/: main.rs
AetherOS/vnode/test/: Cargo.toml
AetherOS/vnode/vfs/: Cargo.toml
AetherOS/vnode/vfs/src/: main.rs
Aetheros/: Cargo.toml  build_initrd_vnodes.sh
Aetheros/Nexus/UI/: README.md
Aetheros/Nexus/UI/docs/ui/: webview.md
Aetheros/Nexus/UI/tools/: colab_websocket_bridge.py
Aetheros/Nexus/UI/vnode/display-compositor/: vnode.yml
Aetheros/Nexus/UI/vnode/webview/: Cargo.toml
Aetheros/common/src/: channel.rs  lib.rs  nexus_net_transport.rs  syscall.rs  syscalls.rs
Aetheros/common/src/ipc/: logger_ipc.rs  mod.rs  ui_protocol.rs  vfs_ipc.rs
Aetheros/docs/apps/: mail.md
Aetheros/docs/net/: dns.md  socket-api.md
Aetheros/docs/user/: shell.md
Aetheros/docs/vnodes/: dns-resolver.md  file-manager.md  init-service.md  net-bridge.md
Aetheros/kernel/: Cargo.toml  config.rs
Aetheros/kernel/src/: elf.rs  lib.rs  syscall.rs  task.rs  usercopy.rs
Aetheros/kernel/src/arch/x86_64/: boot.rs  gdt.rs  idt.rs  irq.rs  mod.rs  paging.rs
Aetheros/kernel/src/drivers/: serial.rs
Aetheros/kernel/src/interrupts/: keyboard.rs  mod.rs  pic.rs  timer.rs
Aetheros/kernel/src/ipc/: mailbox.rs  mod.rs
Aetheros/kernel/src/task/: scheduler.rs  tcb.rs
Aetheros/src/ipc/: dns_ipc.rs  mail_ipc.rs  net_ipc.rs  shell_ipc.rs  socket_ipc.rs  vfs_ipc.rs
Aetheros/vnode/dns-resolver/: Cargo.toml
Aetheros/vnode/file-manager/: vnode.yml
Aetheros/vnode/file-manager/src/: main.rs
Aetheros/vnode/init-service/: vnode.yml
Aetheros/vnode/init-service/src/: main.rs
Aetheros/vnode/mail-service/: Cargo.toml
Aetheros/vnode/model-runtime/: vnode.yml
Aetheros/vnode/net-stack/: Cargo.toml  aethernet_device.rs  main.rs
Aetheros/vnode/net-stack/src/: aethernet_device.rs  main.rs
Aetheros/vnode/registry/: Cargo.toml  vnode.yml
Aetheros/vnode/shell/: vnode.yml
Aetheros/vnode/shell/src/: main.rs
Aetheros/vnode/test/: Cargo.toml  vnode.yml
Aetheros/vnode/vfs/: vnode.yml
Aetheros/vnode/vfs/src/: main.rs
Nexus/UI/docs/ui/: ipc.md  layout-engine.md
Nexus/UI/tools/: colab_ui_test.py  colab_websocket_bridge.py
Nexus/UI/vnode/display-compositor/: Cargo.toml
Nexus/UI/vnode/display-compositor/src/: main.rs
Nexus/UI/vnode/webview/: Cargo.toml
