[workspace]
resolver = "2"
members = [
    "Nexus/UI/vnode/display-compositor",
    "Nexus/UI/vnode/webview",
    "common",
    "kernel",
    "vnode/echo",
    "vnode/logger",
    "vnode/test",
]

[workspace.dependencies]
bootloader = "0.11.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
