[workspace]
resolver = "2"
members = [
    "Nexus/UI/vnode/display-compositor",
    "Nexus/UI/vnode/webview",
    "common",
    "kernel",
    "vnode/echo",
    "vnode/logger",
    "vnode/test",
    "vnode/registry",
    "vnode/init-service",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
