[package]
name = "aetheros-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "aetheros-common", path = "../common" }
bootloader-api = { version = "0.11.2", features = ["framebuffer", "memory_map"] }
x86_64 = { version = "0.14.9", default-features = false, features = ["instructions", "step_cfg"] }
spin = "0.9.8"
linked_list_allocator = "0.10.1"
conquer-once = "0.4.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
