[package]
name = "model-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

# The binary target for the V-Node itself
[[bin]]
name = "model-runtime"
path = "src/main.rs"

[build-dependencies]
cargo-binutils = "0.3"
