[package]
name = "net-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10"
common = { path = "../../common" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

# The binary target for the V-Node itself
[[bin]]
name = "net-bridge"
path = "src/main.rs"

[build-dependencies]
cargo-binutils = "0.3"
