[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
aetheros-common = { path = "../../common" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
# 'alooc' was a typo, should be 'alloc' or removed if not needed directly
# For this task, assuming 'alloc' feature in serde/postcard is sufficient

# Configure cargo to build a no_std binary
[[bin]]
name = "registry"
path = "src/main.rs"
