[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "aetheros-common", path = "../../common" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
[[bin]]
name = "registry"
path = "src/main.rs"
