[package]
name = "socket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
# 'alooc' was a typo, should be 'alloc' or removed if not needed directly
# For this task, assuming 'alloc' feature in serde/postcard is sufficient

[lib]
crate-type = ["cdylib"]

# The binary target for the V-Node itself
[[bin]]
name = "socket-api"
path = "src/main.rs"

[build-dependencies]
cargo-binutils = "0.3"
