[package]
name = "aetheros-test"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "aetheros-common", path = "../../common" }
alloc = { version = "0.0.0", package = "alloc" } # Use alloc from no_std
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
