[package]
name = "display-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "aetheros-common", path = "../../../../common" }
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
postcard = { version = "1.0.8", features = ["alloc"] }
linked_list_allocator = "0.10.5"

# The binary target for the V-Node itself
[[bin]]
name = "display-compositor"
path = "src/main.rs"

[build-dependencies]
cargo-binutils = "0.3"
