[package]
name = "webview"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "aetheros-common", path = "../../../../common" }
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
postcard = { version = "1.0.8", features = ["alloc"] }

# The binary target for the V-Node itself
[[bin]]
name = "webview"
path = "src/main.rs"

[build-dependencies]
cargo-binutils = "0.3"
